# microdefectcv

./: .gitignore  LICENSE  README.md  google83f6685f5c2618e9 (1).html  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-ci.yml
docs/: benchmark_plan.md  method_overview.md
examples/: demo_perovskite_sem.py
microdefectcv/: __init__.py  cli.py  filters.py  metrics.py  postprocessing.py  preprocessing.py  visualization.py
sample_images/: README.md
tests/: test_filters.py
