[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdefectcv"
version = "0.1.0"
description = "Adaptive OpenCV-based defect enhancement and segmentation for SEM and microstructure images"
readme = "README.md"
authors = [
    {name = "Sahil Soni", email = "Sahilsonii369@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["opencv", "defect-detection", "SEM", "perovskite", "image-processing", "microscopy", "solar-cells"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "matplotlib>=3.4",
]

[project.urls]
Homepage = "https://github.com/Sahilsonii/microdefectcv"
Issues   = "https://github.com/Sahilsonii/microdefectcv/issues"

[tool.setuptools.packages.find]
include = ["microdefectcv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

