[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdefectcv"
version = "0.1.0"
description = "Adaptive OpenCV-based defect enhancement and segmentation for SEM and microstructure images"
readme = "README.md"
authors = [
    {name = "Sahil Soni", email = "Sahilsonii369@gmail.com"}
]
license = "MIT"
requires-python = ">=3.8"

keywords = [
    "opencv",
    "computer-vision",
    "image-processing",
    "digital-image-processing",
    "cv",
    "python",
    "microscopy",
    "microscopy-image-analysis",
    "scanning-electron-microscopy",
    "sem",
    "sem-image-processing",
    "sem-image-analysis",
    "microstructure",
    "microstructure-analysis",
    "microstructural-characterization",
    "materials-informatics",
    "material-science",
    "materials-science",
    "nanotechnology",
    "nanomaterials",
    "thin-films",
    "thin-film-analysis",
    "surface-morphology",
    "morphology-analysis",
    "texture-analysis",
    "defect-detection",
    "defect-analysis",
    "defect-segmentation",
    "micro-defects",
    "microdefects",
    "surface-defects",
    "image-segmentation",
    "semantic-segmentation",
    "binary-segmentation",
    "thresholding",
    "adaptive-thresholding",
    "dynamic-thresholding",
    "otsu-thresholding",
    "clahe",
    "contrast-enhancement",
    "edge-detection",
    "morphological-operations",
    "contour-detection",
    "connected-components",
    "blob-detection",
    "region-analysis",
    "feature-extraction",
    "grain-analysis",
    "grain-boundaries",
    "grain-boundary-detection",
    "crystallography",
    "crystal-defects",
    "void-detection",
    "pinhole-detection",
    "pinholes",
    "pores",
    "porosity",
    "cracks",
    "surface-voids",
    "solar-cells",
    "photovoltaics",
    "pv",
    "perovskite",
    "perovskite-solar-cells",
    "perovskite-photovoltaics",
    "halide-perovskites",
    "metal-halide-perovskites",
    "thin-film-solar-cells",
    "opv",
    "organic-photovoltaics",
    "tandem-solar-cells",
    "pbi2",
    "lead-iodide",
    "film-uniformity",
    "film-quality",
    "device-degradation",
    "degradation-analysis",
    "materials-characterization",
    "automated-inspection",
    "quality-control",
    "non-destructive-evaluation",
    "scientific-computing",
    "research-software",
    "open-source",
    "reproducible-research"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "matplotlib>=3.4",
]

[project.urls]
Homepage = "https://github.com/Sahilsonii/microdefectcv"
Issues   = "https://github.com/Sahilsonii/microdefectcv/issues"

[tool.setuptools.packages.find]
include = ["microdefectcv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

