[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdefectcv"
version = "0.1.0.post1"
description = "Adaptive OpenCV-based defect enhancement and segmentation for SEM and microstructure images"
readme = "README.md"
authors = [
    {name = "Sahil Soni", email = "Sahilsonii369@gmail.com"}
]
license = "MIT"
requires-python = ">=3.8"

keywords = [
    "opencv",
    "computer-vision",
    "image-processing",
    "defect-detection",
    "defect-segmentation",
    "sem",
    "scanning-electron-microscopy",
    "microstructure",
    "materials-science",
    "perovskite",
    "perovskite-solar-cells",
    "thin-films",
    "pinhole-detection",
    "pbi2",
    "clahe",
    "image-segmentation",
    "grain-boundary-detection",
    "morphological-operations",
    "quality-control",
    "scientific-computing"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "matplotlib>=3.4",
]

[project.urls]
Homepage = "https://github.com/Sahilsonii/microdefectcv"
Issues   = "https://github.com/Sahilsonii/microdefectcv/issues"

[tool.setuptools.packages.find]
include = ["microdefectcv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

